<resources>
    <string name="app_name">MarryMax</string>

    <string name="font_name_fontawesome">fontawesome</string>
    <string name="font_name_source_centurygothic">CenturyGothic</string>
    <!-- Strings related to login -->

    <string name="prompt_email">Type Your Email</string>
    <string name="prompt_email_reg">Enter Your Email</string>
    <string name="prompt_password">Password </string>
    <string name="reg_password">Create New Password For MarryMax</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="forgetpassword"><u>Forgot Password ?</u></string>

    <string name="updatechoice"><u><b>Update Choices </b></u></string>

    <string name="reset_sub_button_text">Reset</string>

    <string name="edit_profile_text"> <u>Edit Profile</u></string>

    <!-- Subscription Plans-->

    <string name="subscription_plan_commited_text">
      <b>We bring you the matches to maximize your options and you connect and communicate with them. </b> \n  When ready to connect with your matches, then Invest In Yourself &amp; Subscribe</string>


    <!--wester union-->
    <string name="wu_subscription_plan_web">
        For payment using Western Union money transfer assistance please contact at:\n<b>Website:</b> MarryMax.com</string>
    <string name="wu_subscription_plan_mem_support_service"><b>Member support service:</b>  +92-51-8746090 available from 10:00 AM - 05:00 PM Pakistan Standard Time</string>
    <string name="wu_subscription_plan_mem_support_email"><b>Email:</b> support@marrymax.com</string>
    <!--easypasa-->
    <string name="ep_desc">Please visit your nearest Easypaisa shop and make payment at this number 0343-77187181 On payment you\'ll receive a Transaction ID. Please save the Transaction ID and let us know, thanks you.</string>
    <string name="ep_desc2">
For assistance please view our tutorial or For queries call at +92-51-8746090  or email at <b> support@marrymax.com</b> .</string>


    <!--jazz cash-->
    <string name="jc_desc">Using this service you can pay via Mobilink by visiting any of their outlets across Pakistan or by an JazzCash Mobile Account.
Below is our contact number for JazzCash Payment.</string>
    <string name="jc_desc2"><b> Contact Number: 0320-5059476 </b>
Having trouble in using JazzCash, Contact Us</string>


    <!--abl-->
    <string name="abl_des">
<b><font fgcolor="red">Account Details:</font></b>\n
<b>Bank Branch Name:</b> Allied Bank Limited Jinnah Avenue, Blue Area, Islamabad \n
<b>Branch Code:</b> 0702  \n
<b>Account Number:</b> 0010028483590011  \n
<b>Account Title:</b> MarryMax (Pvt.) Ltd    \n

For queries call at +92-51-8746090  or email at <b> support@marrymax.com</b> .
    </string>


    <string name="cash_desc"><b>Address:</b> 3rd Floor, Green Trust Tower, Jinnah Avenue, Blue Area, Islamabad, Paksitan \n

For queries call at +92-51-8746090  or email at <b> support@marrymax.com</b> . </string>


    <string name="declaration_text_i_understand">
   I understand that if I violate any of the above terms, my profile will be deactivated immediately and account will be blocked permanently.

    </string>


    <string name="personality_memberinfo_title">
 <u>Add Specific Details</u>


    </string>

    <string name="personality_memberinfo_dialog_title">
\u2022 Please add specific details to standout your profile.
\n\u2022 Any of these details will be available to view for subscribers only
    </string>


    <string name="personality_note"><b>NOTE!</b> Any text update will be available after MarryMax.com review.</string>


    <string name="personality_memberinfo_text">
 \u2022  <u>My Residence</u> \n
   \u2022 <u>About My Parents</u> \n
  \u2022  <u>About Siblings</u>\n
  \u2022 <u>Job Information</u>\n
 \u2022  <u>Qualification Details</u>\n
 \u2022  <u>Social Status</u>\n

    </string>

    <string name="font_name_centurygothic">centurygotic</string>
    <string name="font_name_centurygothicBold">centurygoticbold</string>
    <string-array name="Countries_array">
        <item>My Country</item>

    </string-array>
    <string-array name="Countries_array_choice">
        <item>My Choice  Country</item>

    </string-array>


    <string-array name="spinner_array_religion">
        <item>Religion</item>
        <item>Muslim</item>
        <item>Ahmedi</item>
        <item>Christian</item>
        <item>Hindu</item>
        <item>Sikh</item>
        <item>Other</item>

    </string-array>

    <string-array name="spinner_array_source">
        <item>Source</item>
        <item>Search Engine</item>
        <item>From a Friend/Family Member</item>
        <item>TV Commercial</item>
        <item>Newspaper/Magzine</item>
        <item>Social Media</item>
        <item>Other</item>

    </string-array>

    <!--    font awesome-->
    <string name="fa_icon_male">&#xf222;</string>
    <string name="fa_icon_female">&#xf221;</string>

    <string name="fa_icon_newmessage">&#xf003;</string>
    <string name="fa_icon_newinterest">&#xf087;</string>
    <string name="fa_icon_favourite">&#xf005;</string>
    <string name="fa_icon_request">&#xf27a;</string>
    <string name="fa_icon_questions">&#xf059;</string>


    <string name="fa_icon_newquestion">&#xf29c;</string>
    <string name="fa_icon_block">&#xf05e;</string>
    <string name="fa_icon_notes">&#xf24a;</string>
    <string name="fa_icon_accepted">&#xf00c;</string>
    <string name="fa_icon_remove">&#xf056;</string>
    <string name="fa_icon_feedback">&#xf27a;</string>


    <string name="fa_icon_send">&#xf1d9;</string>
    <string name="fa_icon_question_withoutcircle">&#xf128;</string>


    <string name="fa_icon_dashboard">&#xf015;</string>
    <string name="fa_icon_uploadphoto">&#xf03e;</string>

    <string name="fa_icon_match_pref">&#xf2a1;</string>
    <string name="fa_icon_ac_setting">&#xf013;</string>
    <string name="fa_icon_profile_setting">&#xf007;</string>
    <string name="fa_icon_logout">&#xf08b;</string>
    <string name="fa_icon_matches">&#xf228;</string>
    <string name="fa_icon_search">&#xf002;</string>
    <string name="fa_icon_subscription">&#xf00c;</string>

    <string name="fa_icon_subscription_envelope">&#xf0e0;</string>
    <string name="fa_icon_subscription_envelope_open">&#xf2b6;</string>

    <string name="fa_icon_edit">&#xf044;</string>
    <string name="fa_icon_date">&#xf073;</string>
    <string name="fa_icon_cross">&#xf00d;</string>
    <string name="fa_icon_camera">&#xf030;</string>
    <string name="fa_icon_bell">&#xf0f3;</string>

    <string name="fa_icon_exclamation_triangle">&#xf071; </string>


    <!--dashboardMain-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="loadmore">Load More</string>
    <string name="Reset">Reset</string>

    <!--dashboardmyMatches-->
    <string name="fa_icon_gallery">&#xf03e;</string>
    <string name="fa_icon_star">&#xf006;</string>
    <string name="fa_icon_delete">&#xf05e;</string>
    <string name="fa_icon_show_interest">&#xf087;</string>
    <string name="fa_icon_menu">&#xf142;</string>
    <string name="fa_icon_withdraw_interest">&#xf112;</string>
    <string name="fa_icon_trash">&#xf014;</string>
    <string name="fa_icon_pause">&#xf04c;</string>

    <!--UserProfile -->
    <string name="fa_icon_thumbs_up">&#xf087;</string>

    <!--Reg Geographic-->
    <string name="tv_name_reg_geogrphic">My Choice Countries</string>
    <string name="title_activity_photo_upload">Upload Photos</string>
    <!-- permission item-->
    <string name="fa_icon_picture">&#xf03e;</string>
    <string name="fa_icon_user">&#xf2c0;</string>
    <string name="fa_icon_phone">&#xf095;</string>

    <string name="fa_icon_wheelchair">&#xf193;</string>
    <!--  <string name="fa_icon_notes">&#xf24a;</string>-->


    <string name="fa_icon_hands_right">&#xf0a4;</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="notifications_admin_channel_name">Global channel</string>
    <string name="notifications_admin_channel_description">Notifications sent from the app admin</string>


</resources>
