<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="10dp"
    android:background="@color/colorWhite"
    app:cardElevation="2dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/LinearLayoutMessageDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="10">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"


                android:layout_weight="2">
                <!--android:background="@drawable/border_dash_user_profile_box"-->
                <!-- android:src="@drawable/female_profile_100"-->
                <ImageView
                    android:id="@+id/ImageViewPermissions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border_dash_main_profile"

                    android:padding="1dp"

                    android:src="@drawable/female_profile_100" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="8"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/TextViewRecommendedMatchDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginRight="5dp"
                    android:text=""
                    android:textColor="@color/colorBlack"
                    android:textSize="9sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/TextViewPermissionsAlias"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="SHAH_R7"
                        android:textColor="@color/colorTextRed"
                        android:textSize="@dimen/text_size_up_h2"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/TextViewPermissionsAge"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="3dp"
                        android:text="age"
                        android:textColor="#7c7c7c"
                        android:textSize="@dimen/text_size_mymatches_desc2" />


                </LinearLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">


                    <TextView
                        android:id="@+id/TextViewPermissionCountry"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="adasdasd"
                        android:textColor="#7c7c7c"
                        android:textSize="@dimen/text_size_mymatches_desc2"
                        android:textStyle="bold" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">


                    <TextView
                        android:id="@+id/TextViewPermissionEducation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="education"
                        android:textColor="#7c7c7c"
                        android:textSize="@dimen/text_size_mymatches_desc2"
                        android:textStyle="bold" />
                </LinearLayout>


            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:padding="8dp"
            android:background="#f2f2f2">

            <LinearLayout
                android:id="@+id/LinearLayoutPermissionPicture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <com.chicsol.marrymax.widgets.faTextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="7dp"
                    android:text="@string/fa_icon_picture" />

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Pictures" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/LinearLayoutPermissionProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <com.chicsol.marrymax.widgets.faTextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="7dp"
                    android:text="@string/fa_icon_user" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Profile" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/LinearLayoutPermissionPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <com.chicsol.marrymax.widgets.faTextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="7dp"
                    android:text="@string/fa_icon_phone" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Phone" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>
