<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.AccountSetting.MyProfileStatusFragment">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:layout_marginTop="5dp"
        app:cardBackgroundColor="#ffecb6"
        app:cardUseCompatPadding="true">

        <android.support.v7.widget.CardView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            app:cardBackgroundColor="#fdfaf1"

            >

            <!--     <FrameLayout
                     android:layout_width="4dp"
                     android:layout_height="match_parent"
                     android:background="#FF0000" />-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"

                android:padding="16dp">

                <TextView
                    android:id="@+id/TextViewMyProfileStatusTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Dear ZEESHAN81, your profile is Not Live"
                    android:textColor="@color/colorBlack" />

                <TextView
                    android:id="@+id/TextViewMyProfileStatusDesc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="You can communicate &amp; interact with other members once your profile is 100% complete and verified. Here are current pending action items:"
                    android:textColor="@color/colorBlack" />


                <LinearLayout
                    android:id="@+id/LinearLayoutMyProfileStatusCompleteProfile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="5dp">

                        <com.chicsol.marrymax.widgets.faTextView
                            android:layout_width="20dp"
                            android:layout_height="wrap_content"
                            android:text="@string/fa_icon_profile_setting"
                            android:textColor="#ef9a00"
                            android:textStyle="bold" />

                        <TextView

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Complete your profile"
                            android:textColor="#ef9a00"
                            android:textStyle="bold" />


                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:text=" (Click to complete your profile)"
                        android:textSize="10sp" />
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/LinearLayoutMyProfileStatusVerifyEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="5dp">

                        <com.chicsol.marrymax.widgets.faTextView
                            android:layout_width="20dp"
                            android:layout_height="wrap_content"
                            android:text="@string/fa_icon_newmessage"
                            android:textColor="#ef9a00"
                            android:textStyle="bold" />

                        <TextView

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Email verification is pending "
                            android:textColor="#ef9a00"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:text=" (You can resend verification code by clicking button, given below)"
                        android:textSize="10sp" />
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/LinearLayoutMyProfileStatusVerifyPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="5dp">

                        <com.chicsol.marrymax.widgets.faTextView
                            android:layout_width="20dp"
                            android:layout_height="wrap_content"
                            android:text="@string/fa_icon_phone"
                            android:textColor="#ef9a00"
                            android:textStyle="bold" />

                        <TextView

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Phone Number verification is pending "
                            android:textColor="#ef9a00"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:text=" (You can Add and Verify Number by clicking )"
                        android:textSize="10sp" />
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/LinearLayoutMyProfileStatusAdminApproval"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="5dp">

                        <com.chicsol.marrymax.widgets.faTextView
                            android:layout_width="20dp"
                            android:layout_height="wrap_content"
                            android:text="@string/fa_icon_phone"
                            android:textColor="#ef9a00"
                            android:textStyle="bold" />

                        <TextView

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Admin Review is pending "
                            android:textColor="#ef9a00"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:text=" (Under normal circumstances, a new profile is reviewed within 24 hours.)"
                        android:textSize="10sp" />
                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>
    </android.support.v7.widget.CardView>

</LinearLayout>